<!--
Copyright 2016 Fredrik Johansson

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <!-- General -->
    <string name="app_name">Lamp Switch</string>

    <!-- Activity Titles -->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- For ease of development / Integration testing -->
    <string name="standard_login_id">1</string>
    <string name="standard_login_name">Frud</string>
    <string name="standard_login_password">pass1</string>

    <!-- Strings related to server -->
    <string name="server_address">http://46.239.118.23:8085/</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="getusers">getusers</string>
    <string name="getuser">getuser</string>
    <string name="save_profile_settings">saveprofilesettings</string>

        <!-- Web socket-->
        <!-- End point -->
        <string name="websocket_endpoint">ws://46.239.118.23:8085/android-ws</string>

        <!-- Messages -->
        <string name="lamp_state_message_on">ON</string>
        <string name="lamp_state_message_off">OFF</string>
        <string name="leave_recipient_list">LEAVE</string>

    <!-- Strings related to login and register -->
    <string name="appeal_to_register">Don\'t have an account?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="server_error">Server error</string>
    <string name="server_error_generic_login">Server error: Wrong email or password.</string>
    <string name="server_error_generic_register">Server error: Invalid information.</string>
    <string name="server_error_generic_update">Server error: Invalid information.</string>
    <string name="json_placeholder_data">[Json data...]</string>

    <!-- Menu item elements -->
    <string name="profile_button_text">Profile</string>

    <!-- Button titles -->
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register Here</string>
    <string name="action_register_short">Register</string>
    <string name="save_button">Save</string>

    <!-- File (local user info saved here) -->
    <string name="user_info">user_info.txt</string>

    <!-- Lamp -->
    <string name="lamp">Lamp</string>

</resources>
