<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2016 Fredrik Johansson

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<!-- Layout with the form which the user can use to update his/her data
    This layout is included in the activity_profile.xml file.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="android.school.fredrik.schoolproject.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <!-- Update progress -->
    <ProgressBar
        android:id="@+id/save_profile_settings_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/save_profile_settings_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Form -->
        <LinearLayout
            android:id="@+id/save_profile_settings_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Email label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/prompt_email"
                android:id="@+id/textView2" />

            <!-- Email input -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/json_placeholder_data"
                android:ems="10"
                android:id="@+id/userName" />

            <!-- Password label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="64dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/prompt_password"
                android:id="@+id/textView" />

            <!-- Password input -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/userPassword"
                android:text="@string/json_placeholder_data" />

            <!-- Save updated data button -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:id="@+id/button2"
                android:layout_weight="0"
                android:onClick="saveProfileSettings"
                android:background="@drawable/custom_button_color"
                />
        </LinearLayout>
        <!-- End of form -->
    </ScrollView>


</LinearLayout>
